Bug 1247505 - Fix woff2 compile error on big endian. r=fredw